--- a/app.html
+++ b/app.html
@@ -31,6 +31,16 @@
   --bad:#ef4444;
   --ok:#0ea5a4;
 }
+    .banner{
+  display:none;
+  margin-bottom:20px;
+  padding:12px 16px;
+  border-radius:14px;
+  background:rgba(14,165,164,.08);
+  border:1px solid rgba(14,165,164,.25);
+  font-weight:600;
+}
+
 
 /* ================= BASE ================= */
 
@@ -190,13 +200,20 @@ a:hover{text-decoration:underline}
 }
 
 .tag{
-  padding:8px 12px;
+  padding:6px 12px;
   border-radius:999px;
-  border:1px solid rgba(16,24,40,.10);
-  background:#fff;
   font-size:12px;
-  font-weight:900;
+  font-weight:700;
+  background:rgba(16,24,40,.05);
+  color:#64748b;
+  border:1px solid rgba(16,24,40,.08);
 }
+.tag.pro{
+  background:rgba(14,165,164,.12);
+  border-color:rgba(14,165,164,.30);
+  color:#0ea5a4;
+}
+
 
 .pGrid{
   display:grid;
@@ -305,6 +322,30 @@ a:hover{text-decoration:underline}
   border:1px solid rgba(244,114,182,.30);
   box-shadow:0 80px 200px rgba(244,114,182,.18);
 }
+
+    /* Soft spacing between main sections */
+.heroBlock + .heroBlock{
+  margin-top:90px;
+}
+
+/* Soft glow separator */
+.heroBlock:not(:last-child)::after{
+  content:"";
+  position:absolute;
+  bottom:-45px;
+  left:50%;
+  transform:translateX(-50%);
+  width:55%;
+  height:1px;
+  background:linear-gradient(
+    90deg,
+    transparent,
+    rgba(79,70,229,.25),
+    transparent
+  );
+  opacity:.35;
+}
+
 
 
 
@@ -461,11 +502,74 @@ input,select,textarea{
 /* ================= FOOTER ================= */
 
 .pp-footer{
-  margin-top:80px;
-  padding:50px 0;
-  background:#0b0f14;
-  color:#fff;
+  margin-top:100px;
+  padding:60px 0;
+  background:linear-gradient(180deg,#0f172a,#0b1220);
+  color:#cbd5e1;
 }
+
+.pp-footbox{
+  max-width:1100px;
+  margin:auto;
+  padding:0 20px;
+}
+
+.pp-footgrid{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:40px;
+}
+
+.pp-footbrand b{
+  color:#ffffff;
+  font-size:18px;
+}
+
+.pp-footmut{
+  margin-top:10px;
+  font-size:13px;
+  line-height:1.6;
+  color:#94a3b8;
+}
+
+.pp-footlinks{
+  display:flex;
+  flex-wrap:wrap;
+  gap:12px;
+}
+
+.pp-footlinks a{
+  color:#cbd5e1;
+  font-weight:600;
+  font-size:14px;
+  text-decoration:none;
+  opacity:.85;
+}
+
+.pp-footlinks a:hover{
+  opacity:1;
+}
+
+.pp-footbottom{
+  margin-top:40px;
+  padding-top:20px;
+  border-top:1px solid rgba(255,255,255,.1);
+  display:flex;
+  justify-content:space-between;
+  font-size:13px;
+  color:#94a3b8;
+}
+
+@media(max-width:768px){
+  .pp-footgrid{
+    grid-template-columns:1fr;
+  }
+  .pp-footbottom{
+    flex-direction:column;
+    gap:10px;
+  }
+}
+
 
 
   </style>
@@ -499,7 +603,7 @@ input,select,textarea{
   </header>
 
   <main class="wrap" id="content">
-    <div class="banner" id="importBanner">Imported shared calculation ✅</div>
+    <div class="banner" id="importBanner" style="display:none;"></div>
 
     <div class="grid">
       <div class="card" id="proCard">
@@ -1656,11 +1760,21 @@ function setMode(m){
     function enableProUI(isPro){
       if (pdfBtn) pdfBtn.disabled = !isPro;
       if (shareBtn) shareBtn.disabled = !isPro;
-      if (compStatus) compStatus.textContent = isPro ? "Unlocked" : "Trial limited";
-      if (insStatus) insStatus.textContent = isPro ? "Unlocked" : "Locked";
+      if (compStatus) compStatus.textContent = isPro ? "PRO" : "Starter";
+      if (insStatus) insStatus.textContent = isPro ? "PRO" : "Starter";
       if (scenarioStatus) scenarioStatus.textContent = isPro ? "PRO enabled" : "Unlock PRO to save scenarios.";
       if (proCard) proCard.style.display = isPro ? "none" : "block";
     }
+
+    if (isPro){
+  compStatus.classList.add("pro");
+  insStatus.classList.add("pro");
+} else {
+  compStatus.classList.remove("pro");
+  insStatus.classList.remove("pro");
+}
+
+    
 
     function updateAccessUI(profile){
       CURRENT_PROFILE = profile;
@@ -2459,7 +2573,7 @@ function setMode(m){
 
         if (importBanner){
           importBanner.style.display = "block";
-          importBanner.textContent = "Imported shared calculation ✅";
+          importBanner.textContent = "Shared pricing loaded.";
           setTimeout(()=>{ importBanner.style.display = "none"; }, 5000);
         }
       } catch(e){
@@ -2543,6 +2657,14 @@ function setMode(m){
         }
 
         CURRENT_USER = user;
+
+        // Hide review form if already reviewed
+const existingReview = await getUserReview(user.id);
+if (existingReview){
+  const reviewCard = document.getElementById("reviewsCard");
+  if (reviewCard) reviewCard.style.display = "none";
+}
+
 
         // Never expose email
         const accountLink = document.getElementById("accountLink");
