--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     gtag('config', 'G-F12747YWBN', { anonymize_ip: true });
   </script>
 
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "vjsgka2ywg");
+</script>
+
   <!-- SEO -->
   <title>ProfitPilot — Pricing Intelligence for Online Sellers</title>
   <meta name="description" content="Calculate true profit & margin, reverse-calculate the selling price you need for a target profit, and run bulk checks. Built for marketplace and store sellers worldwide. Trial available. One-time PRO unlock.">
