--- a/privacy.html
+++ b/privacy.html
@@ -9,6 +9,22 @@
   <meta name="robots" content="index,follow">
   <link rel="canonical" href="https://profitpilot.ukwebtools.com/privacy.html">
 
+  <!-- Google Analytics (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F12747YWBN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-F12747YWBN', { anonymize_ip: true });
+  </script>
+
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "vjsgka2ywg");
+</script>
   <!-- Open Graph -->
   <meta property="og:title" content="Privacy Policy — ProfitPilot">
   <meta property="og:description" content="What data ProfitPilot collects, how it’s used, and your choices.">
