--- a/signup.html
+++ b/signup.html
@@ -263,9 +263,9 @@
       <div class="brandline">
         <div class="brand">ProfitPilot</div>
         <div class="pillrow" aria-label="Trust">
-          <span class="pill">No subscriptions</span>
-          <span class="pill">Cancel nothing</span>
-          <span class="pill">Email only</span>
+          <span class="pill">One-time purchase</span>
+          <span class="pill">No recurring billing</span>
+          <span class="pill">Email signup only</span>
         </div>
       </div>
 
