--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
   <meta name="robots" content="noindex,nofollow">
   <link rel="icon" href="https://ukwebtools.com/favicon.svg" type="image/svg+xml">
 
-  <!-- Google Analytics (GA4) -->
+  <!-- Analytics: GA4 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-F12747YWBN"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -16,13 +16,15 @@
     gtag('config', 'G-F12747YWBN', { anonymize_ip: true });
   </script>
 
+  <!-- Analytics: Microsoft Clarity -->
   <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+      t=l.createElement(r); t.async=1; t.src="https://www.clarity.ms/tag/"+i;
+      y=l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t,y);
     })(window, document, "clarity", "script", "vjsgka2ywg");
-</script>
+  </script>
+
   <style>
     :root{
       --bg:#0b0f14;
@@ -41,9 +43,10 @@
     body{
       margin:0;
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      background:radial-gradient(900px 520px at 20% 0%, rgba(94,234,212,.12), transparent 55%),
-                 radial-gradient(900px 520px at 80% 0%, rgba(96,165,250,.10), transparent 55%),
-                 var(--bg);
+      background:
+        radial-gradient(900px 520px at 20% 0%, rgba(94,234,212,.12), transparent 55%),
+        radial-gradient(900px 520px at 80% 0%, rgba(96,165,250,.10), transparent 55%),
+        var(--bg);
       color:var(--txt);
     }
     a{color:var(--accent);text-decoration:none}
@@ -84,10 +87,10 @@
     .pp-user{
       padding:10px 14px;border-radius:999px;border:1px solid rgba(255,255,255,.10);
       background:rgba(255,255,255,.06);
-      color:rgba(255,255,255,.80);
+      color:rgba(255,255,255,.85);
       font-weight:900;
       display:none;
-      max-width:320px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;
+      max-width:220px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;
     }
     .pp-crumbs{
       margin-top:10px;
@@ -99,16 +102,16 @@
     .pp-sep{opacity:.55}
 
     /* ---------- Card ---------- */
-    .wrap{max-width:560px;margin:22px auto 44px;padding:0 14px}
+    .wrap{max-width:560px;margin:22px auto 48px;padding:0 14px}
     .card{
       background:linear-gradient(180deg,rgba(94,234,212,.10),transparent 60%),var(--card);
       border:1px solid var(--line);
       border-radius:18px;
-      padding:20px;
+      padding:22px;
       box-shadow:var(--shadow);
     }
-    h1{margin:0 0 10px;font-size:22px;letter-spacing:-.02em}
-    .subtitle{margin:0 0 14px;color:var(--muted);font-size:13px;line-height:1.6}
+    h1{margin:0 0 8px;font-size:22px;letter-spacing:-.02em}
+    .subtitle{margin:0 0 16px;color:var(--muted);font-size:13px;line-height:1.6}
 
     label{font-size:12px;color:var(--muted);margin-top:14px;display:block}
     .field{position:relative}
@@ -174,12 +177,20 @@
       border:1px solid rgba(255,255,255,.10);
       background:rgba(255,255,255,.03);
       word-break:break-word;
+      min-height:44px;
+      display:flex;align-items:center;
     }
     .msg.ok{border-color:rgba(52,211,153,.28);background:rgba(52,211,153,.08);color:rgba(234,240,255,.92)}
     .msg.bad{border-color:rgba(251,113,133,.28);background:rgba(251,113,133,.08);color:rgba(234,240,255,.92)}
 
     .tiny{font-size:12px;color:var(--muted)}
     .divider{height:1px;background:rgba(255,255,255,.08);margin:14px 0}
+    .footer{
+      text-align:center;
+      font-size:12px;
+      color:rgba(255,255,255,.55);
+      margin-top:14px;
+    }
   </style>
 
   <script type="application/ld+json" id="ppBreadcrumbJson"></script>
@@ -201,7 +212,7 @@
       </div>
 
       <div class="pp-right">
-        <span class="pp-user" id="ppUserChip">—</span>
+        <span class="pp-user" id="ppUserChip">Signed in</span>
 
         <!-- Signed OUT -->
         <a class="pp-btn pp-active" id="ppLoginBtn" href="login.html">Log in</a>
@@ -247,13 +258,15 @@
       <button class="btn primary" id="loginBtn" type="button">Log in</button>
       <button class="btn" id="goSignupBtn" type="button">Create account</button>
 
-      <div class="msg" id="msgBox">—</div>
+      <div class="msg" id="msgBox">Enter your email and password to continue.</div>
 
       <div class="divider"></div>
 
       <div class="note">
         Trouble logging in? Email <a href="mailto:support@ukwebtools.com">support@ukwebtools.com</a>
       </div>
+
+      <div class="footer">ProfitPilot by UKwebtools</div>
     </div>
   </div>
 
@@ -261,11 +274,9 @@
   import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
 
   (async ()=>{
-    // ✅ Supabase (public anon key is OK in frontend)
     const SUPABASE_URL = "https://xsigsftvfknefpdfsyae.supabase.co";
     const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhzaWdzZnR2ZmtuZWZwZGZzeWFlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyNzY4NjksImV4cCI6MjA4NTg1Mjg2OX0.Jkkh9Jd46saYBVipN8bxbWhjmhG6mgaFgtTpirKUAWg";
 
-    // ✅ IMPORTANT: same storageKey must be used on ALL pages (login/app/etc)
     const supabase = createClient(SUPABASE_URL, SUPABASE_ANON, {
       auth: {
         persistSession: true,
@@ -330,16 +341,6 @@
       return message || "Login failed. Please try again.";
     }
 
-    // Show real JS errors in the box
-    window.addEventListener("error", (e) => {
-      console.error("Window error:", e.error || e.message);
-      setMsg("JS error: " + (e.message || "unknown"), "bad");
-    });
-    window.addEventListener("unhandledrejection", (e) => {
-      console.error("Unhandled promise rejection:", e.reason);
-      setMsg("JS error: " + (e.reason?.message || String(e.reason)), "bad");
-    });
-
     // Show/hide password
     togglePw.addEventListener("click", ()=>{
       const isPw = pwEl.type === "password";
@@ -358,25 +359,21 @@
 
     goSignupBtn.addEventListener("click", ()=> location.href = "signup.html");
 
-    // Nav auth UI
     async function refreshAuthUI(){
       const { data: { session } } = await supabase.auth.getSession();
 
-      if (session?.user?.email){
+      if (session?.user){
         userChip.style.display = "inline-flex";
-        userChip.textContent = session.user.email;
+        userChip.textContent = "Signed in"; // ✅ do not show email
 
         loginNavBtn.style.display = "none";
         signupNavBtn.style.display = "none";
-
         openNavBtn.style.display = "inline-flex";
         logoutNavBtn.style.display = "inline-flex";
       } else {
         userChip.style.display = "none";
-
         loginNavBtn.style.display = "inline-flex";
         signupNavBtn.style.display = "inline-flex";
-
         openNavBtn.style.display = "none";
         logoutNavBtn.style.display = "none";
       }
@@ -389,75 +386,67 @@
       await refreshAuthUI();
     });
 
-    // If already signed in, show continue/sign-out controls (NO illegal top-level return)
-    setMsg("—");
-    const { data: { session } } = await supabase.auth.getSession();
+    // Boot
+    await refreshAuthUI();
+    supabase.auth.onAuthStateChange(()=>refreshAuthUI());
 
+    // If already signed in, offer continue/sign-out
+    const { data: { session } } = await supabase.auth.getSession();
     if (session?.user){
       setMsg("You’re already signed in on this device.", "ok");
 
-      // Continue
       loginBtn.textContent = "Continue to app";
-      loginBtn.onclick = () => location.replace("app.html");
+      loginBtn.onclick = () => setTimeout(()=>location.replace("app.html"), 250);
 
-      // Sign out
       goSignupBtn.textContent = "Sign out";
-      goSignupBtn.onclick = async () => {
+      goSignupBtn.onclick = async ()=>{
         await supabase.auth.signOut();
         setMsg("Signed out. Please log in again.", "ok");
 
-        // reset buttons
         loginBtn.textContent = "Log in";
         goSignupBtn.textContent = "Create account";
         loginBtn.onclick = null;
-        goSignupBtn.onclick = () => location.href="signup.html";
+        goSignupBtn.onclick = () => location.href = "signup.html";
+        await refreshAuthUI();
       };
-
-      await refreshAuthUI();
-    } else {
-      // Normal boot
-      await refreshAuthUI();
-      supabase.auth.onAuthStateChange(()=>refreshAuthUI());
-
-      // Login action
-      loginBtn.addEventListener("click", async ()=>{
-        const email = emailEl.value.trim();
-        const password = pwEl.value;
-
-        if (!email){ setMsg("Please enter your email.", "bad"); emailEl.focus(); return; }
-        if (!password){ setMsg("Please enter your password.", "bad"); pwEl.focus(); return; }
-
-        setLoading(true);
-        setMsg("Logging in…");
-
-        try{
-          const { error } = await supabase.auth.signInWithPassword({ email, password });
-
-          if (error){
-            console.error("signInWithPassword error:", error);
-            setLoading(false);
-            setMsg(friendlyAuthError(error.message), "bad");
-            return;
-          }
-
-          // Confirm session saved
-          const { data: s2, error: e2 } = await supabase.auth.getSession();
-          if (e2 || !s2?.session){
-            console.error("getSession after login failed:", e2, s2);
-            setLoading(false);
-            setMsg("Login succeeded but browser did not save session. Try another browser or disable extensions.", "bad");
-            return;
-          }
-
-          setMsg("Success. Redirecting…", "ok");
-          location.replace("app.html");
-        } catch(err){
-          console.error("Login exception:", err);
-          setLoading(false);
-          setMsg("Unexpected error: " + (err?.message || String(err)), "bad");
-        }
-      });
+      return;
     }
+
+    // Login action
+    loginBtn.addEventListener("click", async ()=>{
+      const email = emailEl.value.trim();
+      const password = pwEl.value;
+
+      if (!email){ setMsg("Please enter your email.", "bad"); emailEl.focus(); return; }
+      if (!password){ setMsg("Please enter your password.", "bad"); pwEl.focus(); return; }
+
+      setLoading(true);
+      setMsg("Logging in…");
+
+      try{
+        const { error } = await supabase.auth.signInWithPassword({ email, password });
+
+        if (error){
+          setLoading(false);
+          setMsg(friendlyAuthError(error.message), "bad");
+          return;
+        }
+
+        // Confirm session saved
+        const { data: s2 } = await supabase.auth.getSession();
+        if (!s2?.session){
+          setLoading(false);
+          setMsg("Login succeeded but session was not saved. Try another browser or disable extensions.", "bad");
+          return;
+        }
+
+        setMsg("Success. Redirecting…", "ok");
+        setTimeout(()=>location.replace("app.html"), 250);
+      } catch(err){
+        setLoading(false);
+        setMsg("Unexpected error: " + (err?.message || String(err)), "bad");
+      }
+    });
   })();
 </script>
 </body>
