--- a/login.html
+++ b/login.html
@@ -201,15 +201,10 @@
   <div class="pp-navwrap" role="navigation" aria-label="Primary">
     <div class="pp-nav">
       <div class="pp-left">
-        <a class="pp-btn" href="https://ukwebtools.com/">← UKwebtools</a>
-        <a class="pp-btn" href="index.html">Home</a>
-        <a class="pp-btn" href="pricing.html">Pricing</a>
-        <a class="pp-btn" href="reviews.html">Reviews</a>
-        <a class="pp-btn" href="help.html">How to use</a>
-        <a class="pp-btn" href="privacy.html">Privacy</a>
-        <a class="pp-btn" href="terms.html">Terms</a>
-        <a class="pp-btn" href="faq.html">FAQ</a>
-      </div>
+  <a class="pp-btn" href="index.html">ProfitPilot</a>
+  <a class="pp-btn" href="pricing.html">Pricing</a>
+  <a class="pp-btn" href="reviews.html">Reviews</a>
+</div>
 
       <div class="pp-right">
         <span class="pp-user" id="ppUserChip">Signed in</span>
@@ -449,5 +444,21 @@
     });
   })();
 </script>
+  <footer style="margin-top:40px;padding:30px 20px;border-top:1px solid rgba(255,255,255,.1);text-align:center;font-size:13px;color:rgba(255,255,255,.6)">
+  
+  <div style="margin-bottom:10px;font-weight:800">ProfitPilot</div>
+
+  <div style="margin-bottom:10px">
+    <a href="faq.html">FAQ</a> |
+    <a href="privacy.html">Privacy</a> |
+    <a href="terms.html">Terms</a> |
+    <a href="help.html">How to use</a>
+  </div>
+
+  <div>
+    © 2026 UKwebtools
+  </div>
+
+</footer>
 </body>
 </html>
