--- a/login.html
+++ b/login.html
@@ -44,9 +44,8 @@
       margin:0;
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
       background:
-        radial-gradient(900px 520px at 20% 0%, rgba(94,234,212,.12), transparent 55%),
-        radial-gradient(900px 520px at 80% 0%, rgba(96,165,250,.10), transparent 55%),
-        var(--bg);
+  radial-gradient(700px 400px at 50% -10%, rgba(94,234,212,.06), transparent 60%),
+  var(--bg);
       color:var(--txt);
     }
     a{color:var(--accent);text-decoration:none}
@@ -60,7 +59,7 @@
       background:rgba(255,255,255,.06);
       border:1px solid rgba(255,255,255,.10);
       border-radius:18px;
-      padding:12px;
+      padding:8px 12px;
       backdrop-filter:blur(10px);
       box-shadow:0 10px 30px rgba(0,0,0,.22);
     }
@@ -75,10 +74,10 @@
     .pp-btn:hover{transform:translateY(-1px);filter:brightness(1.05)}
     .pp-btn:active{transform:translateY(0)}
     .pp-primary{
-      border:none;color:#0b1220;
-      background:linear-gradient(135deg,var(--accent),var(--accent2));
-      box-shadow:0 14px 28px rgba(96,165,250,.18);
-    }
+  border:1px solid rgba(255,255,255,.12);
+  background:rgba(94,234,212,.9);
+  color:#0b1220;
+}
     .pp-active{
       border-color:rgba(94,234,212,.35);
       background:rgba(94,234,212,.10);
@@ -102,13 +101,14 @@
     .pp-sep{opacity:.55}
 
     /* ---------- Card ---------- */
-    .wrap{max-width:560px;margin:22px auto 48px;padding:0 14px}
+    .wrap{max-width:560px;margin:60px auto 80px;padding:0 20px}
     .card{
-      background:linear-gradient(180deg,rgba(94,234,212,.10),transparent 60%),var(--card);
+      .card{
+  background:var(--card);
       border:1px solid var(--line);
       border-radius:18px;
       padding:22px;
-      box-shadow:var(--shadow);
+      box-shadow:0 12px 30px rgba(0,0,0,.25);
     }
     h1{margin:0 0 8px;font-size:22px;letter-spacing:-.02em}
     .subtitle{margin:0 0 16px;color:var(--muted);font-size:13px;line-height:1.6}
@@ -218,15 +218,6 @@
         <a class="pp-btn" id="ppLogoutBtn" href="#" style="display:none">Log out</a>
       </div>
     </div>
-
-    <div class="pp-crumbs" aria-label="Breadcrumb">
-      <a href="https://ukwebtools.com/">UKwebtools</a>
-      <span class="pp-sep">›</span>
-      <a href="index.html">ProfitPilot</a>
-      <span class="pp-sep">›</span>
-      <span>Log in</span>
-    </div>
-  </div>
 
   <!-- CONTENT -->
   <div class="wrap">
