--- a/app.html
+++ b/app.html
@@ -202,14 +202,14 @@ a:hover{text-decoration:underline}
 /* ================= LAYOUT ================= */
 
 .wrap{
-  max-width:1050px;
+  max-width:1100px;
   margin:40px auto 80px;
   padding:0 20px;
 }
 
 .grid{
   display:grid;
-  grid-template-columns: 1.25fr .75fr;
+  grid-template-columns: 1.6fr 1fr;
   gap:22px;
   align-items:start;
 }
@@ -771,6 +771,29 @@ input:focus, select:focus, textarea:focus{
 .pp-footmut{ color:rgba(226,232,240,.70) !important; }
 .pp-footlinks a{ opacity:.85 !important; }
 .pp-footbottom{ color:rgba(226,232,240,.60) !important; }
+/* ✅ STEP 1: stop everything from jumping on hover (calmer = premium) */
+.pItem:hover,
+.heroBlock:hover{
+  transform:none !important;
+  box-shadow: var(--shadow2) !important;
+}
+/* ✅ STEP 2: PRO card looks designed, not like a random card */
+#proCard{
+  background: linear-gradient(135deg, rgba(14,165,164,.10), rgba(79,70,229,.10)) !important;
+  border: 1px solid rgba(14,165,164,.22) !important;
+  box-shadow: 0 12px 40px rgba(16,24,40,.08) !important;
+}
+#proCard .title{ margin-bottom: 6px !important; }
+/* ✅ STEP 3: consistent typography */
+.title{
+  font-size: 20px !important;
+  line-height: 1.2 !important;
+  letter-spacing: -0.2px;
+}
+.small{
+  color: var(--muted) !important;
+  line-height: 1.55 !important;
+}
 
   </style>
 </head>
