--- a/app.html
+++ b/app.html
@@ -809,6 +809,60 @@ input:focus, select:focus, textarea:focus{
 .heroBlock .divider{ margin: 18px 0 !important; }
 .heroBlock label{ margin-top: 12px !important; }
 .heroBlock .row{ margin-top: 10px; }
+/* ✅ Step 9: right column = secondary (lighter cards) */
+.rightSide .heroBlock,
+.rightSide .card{
+  padding: 18px !important;
+  border-radius: 16px !important;
+  box-shadow: 0 10px 30px rgba(16,24,40,.06) !important;
+}
+
+#calcCard{
+  padding: 26px !important;
+  border-radius: 18px !important;
+  box-shadow: 0 18px 60px rgba(16,24,40,.10) !important;
+}
+/* ✅ Step 10: buttons look like SaaS */
+.btn{
+  padding: 10px 14px !important;
+  border-radius: 999px !important;
+  font-weight: 800 !important;
+  box-shadow: none !important;
+}
+.btn.primary{
+  background: #0ea5a4 !important;
+  color: #fff !important;
+  border-color: transparent !important;
+}
+.btn.primary:hover{
+  background: #0b9a99 !important;
+}
+.btn.ghost{
+  background: transparent !important;
+}
+/* ✅ Step 11: mode buttons calmer + aligned */
+.heroModes{
+  gap: 10px !important;
+  margin-top: 16px !important;
+}
+.heroBtn{
+  padding: 10px 14px !important;
+  border-radius: 999px !important;
+  background: rgba(16,24,40,.03) !important;
+  border: 1px solid rgba(16,24,40,.10) !important;
+  box-shadow: none !important;
+}
+.heroBtn.active{
+  background: rgba(14,165,164,.12) !important;
+  border-color: rgba(14,165,164,.35) !important;
+}
+/* ✅ Step 12: footer softer */
+.pp-footer{
+  background: #0f172a !important;
+}
+.pp-footbottom{
+  border-top: 1px solid rgba(255,255,255,.08) !important;
+}
 
   </style>
 </head>
